Correção -> alteraçao de inputs para botoes na aba documentos.

--- a/forms/Cadastro Representante/Cadastro Representante.html
+++ b/forms/Cadastro Representante/Cadastro Representante.html
@@ -548,90 +548,103 @@
                                 </div>
                                 <div class="panel-body">
                                     <div class="row">
-                                        <div class="col-md-3">
-                                            <p>Carta de Solicitação</p>
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Visualizar"
-                                                   name="documentos_solicitacao_visu"
-                                                   id="documentos_solicitacao_visu">
-                                            <a href="./Cadastro%20Representante.html" rel="modal:open"
-                                               style="text-decoration: none; color: white">Gerar PDF></a>
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Anexar"
-                                                   name="documentos_solicitacao_anexar"
-                                                   id="documentos_solicitacao_anexar">
+                                        <div class="col-md-12">
+                                            <label for="documentos_solicitacao_visu">Carta de Solicitação</label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_solicitacao_visu"
+                                                    name="documentos_solicitacao_visu">Visualizar
+                                            </button>
+                                            <label for="documentos_solicitacao_anexar"></label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_solicitacao_anexar"
+                                                    name="documentos_solicitacao_anexar">Anexar
+                                            </button>
                                         </div>
-                                        <div class="col-md-3">
-                                            <p>Documento de ifentificação do Representante</p>
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Visualizar"
-                                                   name="documentos_identificacao_visu"
-                                                   id="documentos_identificacao_visu">
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Anexar"
-                                                   name="documentos_identificacao_anexa"
-                                                   id="documentos_identificacao_anexa">
+                                        <div class="col-md-12">
+                                            <label for="documentos_identificacao_visu">Documento de ifentificação do
+                                                Representante</label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_identificacao_visu"
+                                                    name="documentos_identificacao_visu">Visualizar
+                                            </button>
+                                            <label for="documentos_identificacao_anexa"></label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_identificacao_anexa"
+                                                    name="documentos_identificacao_anexa">Anexar
+                                            </button>
                                         </div>
-                                        <div class="col-md-3">
-                                            <p>Documento Bancário</p>
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Visualizar"
-                                                   name="documentos_bancaraio_visu" id="documentos_bancaraio_visu">
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Anexar"
-                                                   name="documentos_bancario_anexar"
-                                                   id="documentos_bancario_anexar">
+                                        <div class="col-md-12">
+                                            <label for="documentos_bancaraio_visu">Documento Bancário</label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_bancaraio_visu"
+                                                    name="documentos_bancaraio_visu">Visualizar
+                                            </button>
+                                            <label for="documentos_bancario_anexar"></label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_bancario_anexar"
+                                                    name="documentos_bancario_anexar">Anexar
+                                            </button>
                                         </div>
-                                        <div class="col-md-3">
-                                            <p>Core do Representante</p>
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Visualizar"
-                                                   name="documentos_core_visu" id="documentos_core_visu">
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Anexar"
-                                                   name="documentos_core_anexar"
-                                                   id="documentos_core_anexar">
+                                        <div class="col-md-12">
+                                            <label for="documentos_core_visu">Core do Representante</label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_core_visu"
+                                                    name="documentos_core_visu">Visualizar
+                                            </button>
+                                            <label for="documentos_core_anexar"></label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_core_anexar"
+                                                    name="documentos_core_anexar">Anexar
+                                            </button>
                                         </div>
-                                        <div class="col-md-3">
-                                            <p>Core da Empresa</p>
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Visualizar"
-                                                   name="documentos_empresa_visu" id="documentos_empresa_visu">
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Anexar"
-                                                   name="documentos_empresa_anexar"
-                                                   id="documentos_empresa_anexar">
+                                        <div class="col-md-12">
+                                            <label for="documentos_empresa_visu">Core da Empresa</label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_empresa_visu"
+                                                    name="documentos_empresa_visu">Visualizar
+                                            </button>
+                                            <label for="documentos_empresa_anexar"></label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_empresa_anexar"
+                                                    name="documentos_empresa_anexar">Anexar
+                                            </button>
                                         </div>
-                                        <div class="col-md-3">
-                                            <p>Inscrição municipal ou Alvará</p>
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Visualizar"
-                                                   name="documentos_alvara_visu" id="documentos_alvara_visu">
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Anexar"
-                                                   name="documentos_alvara_anexar"
-                                                   id="documentos_alvara_anexar">
+                                        <div class="col-md-12">
+                                            <label for="documentos_alvara_visu">Inscrição municipal ou Alvará</label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_alvara_visu"
+                                                    name="documentos_alvara_visu">Visualizar
+                                            </button>
+                                            <label for="documentos_alvara_anexar"></label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_alvara_anexar"
+                                                    name="documentos_alvara_anexar">Anexar
+                                            </button>
                                         </div>
-                                        <div class="col-md-3">
-                                            <p>Contrato Social</p>
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Visualizar"
-                                                   name="documentos_contrato_visu" id="documentos_contrato_visu">
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Anexar"
-                                                   name="documentos_contrato_anexar"
-                                                   id="documentos_contrato_anexar">
+                                        <div class="col-md-12">
+                                            <label for="documentos_contrato_visu">Contrato Social</label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_contrato_visu"
+                                                    name="documentos_contrato_visu">Visualizar
+                                            </button>
+                                            <label for="documentos_contrato_anexar"></label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_contrato_anexar"
+                                                    name="documentos_contrato_anexar">Anexar
+                                            </button>
                                         </div>
-                                        <div class="col-md-3">
-                                            <p>Comprovante de endereço para correspondência</p>
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Visualizar"
-                                                   name="documentos_comprovante_visu"
-                                                   id="documentos_comprovante_visu">
-                                            <input class="btn btn-primary margem-top-btn" type="submit"
-                                                   value="Anexar"
-                                                   name="documentos_comprovante_anexar"
-                                                   id="documentos_comprovante_anexar">
+                                        <div class="col-md-12">
+                                            <label for="documentos_comprovante_visu">Comprovante de endereço para
+                                                correspondência</label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_comprovante_visu"
+                                                    name="documentos_comprovante_visu">Visualizar
+                                            </button>
+                                            <label for="documentos_comprovante_anexar"></label>
+                                            <button class="btn btn-info" style="margin-top: 20px"
+                                                    id="documentos_comprovante_anexar"
+                                                    name="documentos_comprovante_anexar">Anexar
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
@@ -700,23 +713,8 @@
                             </div>
                         </div>
                         <!-- FIM :: Tab Contratos -->
-
-                        <!-- Modal -->
-                        <div class="modal modal2" id="modalvisu">
-                            <div class="fluig-style-guide">
-                                <p>Conteuado a ser visualizado</p>
-                                <div style="text-align: right;">
-                                    <a href="#" rel="modal:close">
-                                        <button type="button" class="btn btn-danger"
-                                                rel="modal:close">Fechar
-                                        </button>
-                                    </a>
-
-                                </div>
-                            </div>
-                        </div>
-                        <!-- FIM :: Modal -->
                     </div>
+                    <!-- FIM :: Conteudo das Tabs -->
                 </div>
             </div>
         </div>
