Correção -> Correções e "melhorias" de código

--- a/forms/Cadastro Representante/Cadastro Representante.html
+++ b/forms/Cadastro Representante/Cadastro Representante.html
@@ -20,7 +20,7 @@
                     <!-- Lista de Tabs -->
                     <ul class="nav nav-tabs" role="tablist">
                         <li class="active"><a href="#tab_indicacao" id="toggle_indicacao" data-toggle="tab"
-                                              aria-expanded="true">Inidicação de
+                                              aria-expanded="true">Indicação de
                             Representante</a></li>
                         <li><a href="#tab_avaliacao" id="toggle_avaliacao" data-toggle="tab">Avaliação de
                             Representante</a></li>
@@ -34,8 +34,8 @@
                         </li>
                     </ul>
                     <!-- FIM :: Lista de Tabs -->
-                    <!-- Conteudo das Tabs -->
                     <div class="tab-content">
+
                         <!-- Tab Indicação de Representante -->
                         <div id="tab_indicacao" class="tab-pane active">
                             <div class="panel panel-default">
@@ -72,6 +72,7 @@
                             </div>
                         </div>
                         <!-- FIM :: Tab Indicação de Representante -->
+
                         <!-- Tab Avaliação do Representante -->
                         <div id="tab_avaliacao" class="tab-pane">
                             <div class="panel panel-default">
@@ -123,7 +124,7 @@
                                     </div>
                                     <div class="col-md-6">
 
-                                        <label for="avaliacao_razao">Razão Sociaç</label>
+                                        <label for="avaliacao_razao">Razão Social</label>
                                         <input type="text" name="avaliacao_razao" id="avaliacao_razao"
                                                class="form-control">
 
@@ -202,6 +203,7 @@
                             </div>
                         </div>
                         <!-- FIM :: Tab Avaliação do Representante -->
+
                         <!-- Tab Representante -->
                         <div id="tab_representante" class="tab-pane">
                             <div class="panel panel-default">
@@ -337,6 +339,7 @@
                             </div>
                         </div>
                         <!-- FIM :: Tab Representante -->
+
                         <!-- Tab Empresa -->
                         <div id="tab_empresa" class="tab-pane">
                             <div class="panel panel-default">
@@ -454,11 +457,12 @@
                             </div>
                         </div>
                         <!-- FIM :: Tab Empresa -->
+
                         <!-- Tab Outros dados -->
                         <div id="tab_dados" class="tab-pane">
                             <div class="panel panel-default">
                                 <div class="panel panel-heading">
-                                    <h3 class="panel-title">Dados Bancarios</h3>
+                                    <h3 class="panel-title">Dados Bancários</h3>
                                 </div>
                                 <div class="panel-body">
                                     <div class="row">
@@ -493,8 +497,8 @@
                                         </div>
                                         <p><b class="margin-left">Observação:</b>Somente conta de Pessoa Juridica,
                                             de
-                                            preferencia nos bancos
-                                            Caixa Economica Federal, Banco do Brasil, Bradesco, Itaú ou Barrisul(RS)
+                                            preferência nos bancos
+                                            Caixa Econômica Federal, Banco do Brasil, Bradesco, Itaú ou Barrisul(RS)
                                         </p>
                                     </div>
                                 </div>
@@ -521,7 +525,7 @@
                                     </div>
                                 </div>
                                 <div class="panel panel-heading">
-                                    <h3 class="panel-title">Para uso interno</h3>
+                                    <h3 class="panel-title">Para uso Interno</h3>
                                 </div>
                                 <div class="panel-body">
                                     <div class="row">
@@ -531,7 +535,7 @@
                                                    class="form-control" readonly>
                                         </div>
                                         <div class="col-md-4">
-                                            <label for="dados_macro_regial">Macro Regiao</label>
+                                            <label for="dados_macro_regial">Macro Região</label>
                                             <input type="text" name="dados_macro_regial" id="dados_macro_regial"
                                                    class="form-control" readonly>
                                         </div>
@@ -540,6 +544,7 @@
                             </div>
                         </div>
                         <!-- FIM :: Tab Outros dados -->
+
                         <!-- Tab Documentos -->
                         <div id="tab_documentos" class="tab-pane">
                             <div class="panel panel-default">
@@ -555,14 +560,14 @@
                                                    name="documentos_solicitacao_visu"
                                                    id="documentos_solicitacao_visu">
                                             <a href="./Cadastro%20Representante.html" rel="modal:open"
-                                               style="text-decoration: none; color: white">Gerar PDF></a>
+                                               style="text-decoration: none; color: white">Gerar PDF</a>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Anexar"
                                                    name="documentos_solicitacao_anexar"
                                                    id="documentos_solicitacao_anexar">
                                         </div>
                                         <div class="col-md-3">
-                                            <p>Documento de ifentificação do Representante</p>
+                                            <p>Documento de Identificação do Representante</p>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Visualizar"
                                                    name="documentos_identificacao_visu"
@@ -603,7 +608,7 @@
                                                    id="documentos_empresa_anexar">
                                         </div>
                                         <div class="col-md-3">
-                                            <p>Inscrição municipal ou Alvará</p>
+                                            <p>Inscrição Municipal ou Alvará</p>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Visualizar"
                                                    name="documentos_alvara_visu" id="documentos_alvara_visu">
@@ -638,6 +643,7 @@
                             </div>
                         </div>
                         <!-- FIM :: Tab Documentos -->
+
                         <!-- Tab Contratos -->
                         <div id="tab_contratos" class="tab-pane">
                             <div class="panel panel-default">
@@ -657,7 +663,7 @@
                                                    class="form-control">
                                         </div>
                                         <div class="col-md-3">
-                                            <label for="contratos_nm_patrimonio">Número de Patrimonio</label>
+                                            <label for="contratos_nm_patrimonio">Número de Patrimônio</label>
                                             <input type="text" name="contratos_nm_patrimonio"
                                                    id="contratos_nm_patrimonio"
                                                    class="form-control">
@@ -689,7 +695,7 @@
                                                    class="form-control">
                                         </div>
                                         <div class="col-md-4">
-                                            <label for="contratos_contrato_servico">Contrato de serviço</label>
+                                            <label for="contratos_contrato_servico">Contrato de Serviço</label>
                                             <input class="btn btn-primary margem-top-btn" type="submit"
                                                    value="Enviar"
                                                    name="contratos_contrato_servico"
@@ -702,7 +708,7 @@
                         <!-- FIM :: Tab Contratos -->
 
                         <!-- Modal -->
-                        <div class="modal modal2" id="modalvisu">
+                        <div class="modal" id="modalvisu">
                             <div class="fluig-style-guide">
                                 <p>Conteuado a ser visualizado</p>
                                 <div style="text-align: right;">
@@ -711,11 +717,11 @@
                                                 rel="modal:close">Fechar
                                         </button>
                                     </a>
-
                                 </div>
                             </div>
                         </div>
                         <!-- FIM :: Modal -->
+
                     </div>
                 </div>
             </div>
